ts(unit-test): Adding-test-library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,10 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
+    "jest.debugCodeLens.showWhenTestStateIn": [
+        "fail",
+        "unknown"
+    ],
+    "jest.showCoverageOnLoad": true,
+    "jest.rootPath": "front",
 }
