--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,8 @@
         "build": "webpack --progress",
         "prod": "webpack --env=prod --progress",
         "lint-code": "eslint \"./src/**/**/*.jsx\"",
-        "test": "npm run test --env=jsdom",
+        "test": "jest",
+        "test:watch": "jest --watchAll --collectCoverage=false",
         "webpackAnalyser": "npm analyser.js"
     },
     "dependencies": {
@@ -29,15 +30,24 @@
     "devDependencies": {
         "@babel/core": "^7.6.2",
         "@babel/plugin-proposal-class-properties": "^7.4.0",
+        "@babel/plugin-proposal-export-default-from": "^7.12.1",
+        "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
         "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@babel/plugin-transform-async-to-generator": "^7.12.1",
         "@babel/plugin-transform-classes": "^7.2.0",
-        "@babel/preset-env": "^7.6.3",
+        "@babel/plugin-transform-react-jsx": "^7.12.12",
+        "@babel/plugin-transform-runtime": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
         "@babel/preset-react": "^7.0.0",
+        "@testing-library/jest-dom": "^5.11.8",
         "autoprefixer": "^9.7.1",
+        "babel-jest": "^26.6.3",
         "babel-loader": "^8.0.6",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.2.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.5",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-import-resolver-webpack": "^0.12.1",
@@ -51,6 +61,8 @@
         "html-webpack-plugin": "^3.2.0",
         "http-server": "^0.11.1",
         "image-webpack-loader": "^6.0.0",
+        "jest": "^26.6.3",
+        "jest-transform-stub": "^2.0.0",
         "less": "^3.10.3",
         "less-loader": "^5.0.0",
         "mini-css-extract-plugin": "^0.8.0",
@@ -66,5 +78,15 @@
         "webpack-dashboard": "^3.2.0",
         "webpack-dev-server": "^3.8.1",
         "webpack-merge": "^4.2.2"
+    },
+    "jest": {
+        "verbose": true,
+        "roots": [
+            "src"
+        ],
+        "testRegex": "\\.test\\.jsx?$",
+        "transform": {
+            "\\.jsx?$": "babel-jest"
+        }
     }
 }
