--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,7 @@
     "author": "xl burger team",
     "license": "ISC",
     "scripts": {
-        "start": "webpack-dashboard webpack-dev-server --env=dev --config --watch --color",
+        "start": "webpack-dashboard -c red -t burger-app -- webpack s --env=dev",
         "build": "webpack --progress",
         "prod": "webpack --env=prod --progress",
         "lint-code": "eslint \"./src/**/**/*.jsx\"",
@@ -44,13 +44,13 @@
         "autoprefixer": "^9.7.1",
         "babel-jest": "^26.6.3",
         "babel-loader": "^8.0.6",
-        "clean-webpack-plugin": "^3.0.0",
+        "clean-webpack-plugin": "4.0.0-alpha.0",
         "css-loader": "^3.2.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.5",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
-        "eslint-import-resolver-webpack": "^0.12.1",
+        "eslint-import-resolver-webpack": "0.13.0",
         "eslint-plugin-import": "^2.21.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.20.0",
@@ -58,9 +58,9 @@
         "eslint-plugin-sort-keys-shorthand": "^2.0.0",
         "eslint-plugin-unicorn": "^20.1.0",
         "file-loader": "^4.2.0",
-        "html-webpack-plugin": "^3.2.0",
+        "html-webpack-plugin": "5.3.1",
         "http-server": "^0.11.1",
-        "image-webpack-loader": "^6.0.0",
+        "image-webpack-loader": "7.0.1",
         "jest": "^26.6.3",
         "jest-transform-stub": "^2.0.0",
         "less": "^3.10.3",
@@ -68,16 +68,16 @@
         "mini-css-extract-plugin": "^0.8.0",
         "minimist": "^1.2.0",
         "node-sass": "^4.13.0",
-        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "optimize-css-assets-webpack-plugin": "5.0.4",
         "postcss-loader": "^3.0.0",
         "sass-loader": "^8.0.0",
-        "uglifyjs-webpack-plugin": "^2.2.0",
-        "webpack": "^4.40.2",
-        "webpack-bundle-analyzer": "^3.6.0",
-        "webpack-cli": "^3.3.9",
-        "webpack-dashboard": "^3.2.0",
-        "webpack-dev-server": "^3.8.1",
-        "webpack-merge": "^4.2.2"
+        "uglifyjs-webpack-plugin": "2.2.0",
+        "webpack": "5.33.2",
+        "webpack-bundle-analyzer": "4.4.1",
+        "webpack-cli": "4.6.0",
+        "webpack-dashboard": "3.3.1",
+        "webpack-dev-server": "3.11.2",
+        "webpack-merge": "5.7.3"
     },
     "jest": {
         "verbose": true,
